update career page

--- a/src/career.html
+++ b/src/career.html
@@ -39,8 +39,8 @@
         </div>
     </header>
     <main class="container mx-auto px-10 sm:px-0 relative">
-        <img src="/Group 26.png" alt="point" class="absolute bottom-5 -z-10 -left-28 hidden lg:block">
-        <img src="/Group 25.png" alt="hex" class="absolute bottom-0 -right-20 hidden xl:block -z-10"> 
+        <img src="/group-26.png" alt="point" class="absolute bottom-5 -z-10 -left-28 hidden lg:block">
+        <img src="/group-25.png" alt="hex" class="absolute bottom-0 -right-20 hidden xl:block -z-10"> 
         <p class="text-sm text-center mb-1">Working With Us</p>
         <img src="/vector-2.png" alt="vector" class="mx-auto">
         <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Careers</h1>
