--- a/src/chemicals.html
+++ b/src/chemicals.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-primary">
     <header class="flex flex-row justify-between py-5 md:mb-24 mb-10 container mx-auto items-center px-10">
-        <img src="/Logo2.png" class=""alt="Logo2">
+        <img src="/logo2.png" class=""alt="Logo2">
         <button  data-collapse-toggle="navbar-default" type="button" class="md:hidden" aria-controls="navbar-default" aria-expanded="false">
             <span class="sr-only">Open main menu</span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -50,6 +50,7 @@
                 <figure class="relative">
                     <img src="/fabric.png" class="w-full" alt="img">
                     <div class="absolute -top-[16%] -right-[10%] w-1/5"><img src="/star-1.png" alt="icon" class=""></div>
+                    <div class="absolute -top-[8.5%] -right-[4.5%] xl:-top-[6.60%]  w-1/12"><img src="/chemicals.png" alt="icon" class="inline"></div>
                     <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/group-1.png" alt="icon" class=""></div>
                 </figure>
                 <div class="mt-8">
@@ -76,10 +77,10 @@
                 </div>
             </div>
     </main>
-    <aside class=" bg-tertiary-2 mb-28">
-        <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8">
+    <aside class=" bg-tertiary-2 mb-36">
+        <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8 relative">
             <figure class="col-span-3 md:col-span-1">
-                <img src="/president-ceo.png" alt="rectangle" class=" w-full">
+                <img src="/president-ceo.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
             </figure>
             <div class="col-span-3 md:col-span-2 my-8">
             <p class="text-sm uppercase mt-2 ">PRESIDENT & CEO</p>
@@ -97,20 +98,20 @@
         <p>Scala fosters creativity that pushes the limits of the business world, and our ever-expanding family highligts the company’s commintment to each region and its faith in its employees.</p>
         </div>
         <div class="flex flex-row mx-auto justify-center gap-x-4 mt-8 sm:mt-0">
-            <img src="/Ellipse 1 (1).png" alt="elipse">
+            <img src="/ellipse.png" alt="elipse">
             <div class="flex flex-col">
                 <p class="font-bold">Jane Doe</p>
                 <p class="text-sm">Sales Manager</p>
             </div>
         </div>
         <div class="flex flex-row mx-auto md:gap-x-2 gap-x-6 mt-2">
-            <img src="/Star 211.png" alt="star">
-            <img src="/Star 212.png" alt="star">
-            <img src="/Star 212.png" alt="star">
+            <img src="/star-211.png" alt="star">
+            <img src="/star-212.png" alt="star">
+            <img src="/star-212.png" alt="star">
         </div>
     </div>
     <div class="container mx-auto mt-24 px-10">
-        <h2 class="text-2xl mb-4"><span class="text-secondary">Plastic</span> News</h2>
+        <h2 class="text-2xl mb-4"><span class="text-secondary">Chemical</span> News</h2>
         <div class=" grid md:grid-cols-3 gap-x-4 gap-y-10">
             <article class=" bg-white">
                 <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
