--- a/src/sustainable-products.html
+++ b/src/sustainable-products.html
@@ -56,6 +56,7 @@
                 <figure class="relative">
                     <img src="/product.png" class="w-full" alt="img">
                     <div class="absolute -top-[16%] -right-[10%] w-1/5"><img src="/star-1.png" alt="icon" class=""></div>
+                    <div class="absolute -top-[6.25%] -right-[4.25%] w-1/12"><img src="/sustainable.png" alt="icon" class=""></div>
                     <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/group-1.png" alt="icon" class=""></div>
                 </figure>
                 <div class="mt-8">
@@ -90,16 +91,16 @@
         <p>We are developing a robust Sustainable Products business that not only meets, but also accelerates the increasing  market demands around the world for circular, renewable and low carbon offerings.</p>
         </div>
         <div class="flex flex-row mx-auto justify-center gap-x-4 mt-8 sm:mt-0">
-            <img src="/Ellipse 1 (1).png" alt="elipse">
+            <img src="/ellipse.png" alt="elipse">
             <div class="flex flex-col">
                 <p class="font-bold">Jane Doe</p>
                 <p class="text-sm">Sales Manager</p>
             </div>
         </div>
         <div class="flex flex-row mx-auto md:gap-x-2 gap-x-6 mt-2">
-            <img src="/Star 211.png" alt="star">
-            <img src="/Star 212.png" alt="star">
-            <img src="/Star 212.png" alt="star">
+            <img src="/star-211.png" alt="star">
+            <img src="/star-212.png" alt="star">
+            <img src="/star-212.png" alt="star">
         </div>
     </div>
     <section class="container mx-auto grid-cols-2 md:mt-36 mt-20 grid gap-x-4 px-10 gap-y-20">
