add raw materials mobile page

--- a/src/raw-metarials-fertilizers.html
+++ b/src/raw-metarials-fertilizers.html
@@ -50,6 +50,7 @@
                 <figure class="relative">
                     <img src="/landscape.png" class="w-full" alt="img">
                     <div class="absolute -top-[16%] -right-[10%] w-1/5"><img src="/star-1.png" alt="icon" class=""></div>
+                    <div class="absolute -top-[7%] -right-[4.25%] w-1/12"><img src="/raw-materials.png" alt="icon" class=""></div>
                     <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/group-1.png" alt="icon" class=""></div>
                 </figure>
                 <div class="mt-8">
@@ -84,16 +85,16 @@
         <p>Working with passionate and experienced colleagues at Scala is rewarding and key to becoming front runner in a business that we developed from scratch. The varierty of chemical products that we trade at Scala is an important factor to develop synergies, be global, bring more added value to our counterparties and participate in cost saving in the supply chain process.</p>
         </div>
         <div class="flex flex-row mx-auto justify-center gap-x-4 mt-8 sm:mt-0">
-            <img src="/Ellipse 1 (1).png" alt="elipse">
+            <img src="/ellipse.png" alt="elipse">
             <div class="flex flex-col">
                 <p class="font-bold">Jane Doe</p>
                 <p class="text-sm">Sales Manager</p>
             </div>
         </div>
         <div class="flex flex-row mx-auto md:gap-x-2 gap-x-6 mt-2">
-            <img src="/Star 211.png" alt="star">
-            <img src="/Star 212.png" alt="star">
-            <img src="/Star 212.png" alt="star">
+            <img src="/star-211.png" alt="star">
+            <img src="/star-212.png" alt="star">
+            <img src="/star-212.png" alt="star">
         </div>
     </div>
     <div class="container mx-auto mt-20 px-10">
