--- a/src/plastics.html
+++ b/src/plastics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastics</title>
+    <title>Plastics</title>,
     <link rel="stylesheet" href="/dist/style.css">
 </head>
 <body class="bg-primary">
@@ -52,6 +52,7 @@
                 <figure class="relative">
                     <img src="/hand_of_young_male_worker_of_large_modern_factory_2021_09_24_03.png" class="w-full" alt="img">
                     <div class="absolute -top-[16%] -right-[10%] w-1/5"><img src="/star-1.png" alt="icon" class=""></div>
+                    <div class="absolute -top-[7%] -right-[4.25%] w-1/12"><img src="/bottle.png" alt="icon" class=""></div>
                     <div class="absolute bottom-[10%] -right-[10%] -z-10 hidden lg:block "><img src="/group-1.png" alt="icon" class=""></div>
                 </figure>
                 <div class="mt-8">
@@ -86,20 +87,22 @@
         <p>Fusion of different cultures coupled with a work environment that is challenging and equally rewarding. Working hard has never been this exciting!</p>
         </div>
         <div class="flex flex-row mx-auto justify-center gap-x-4 mt-8 sm:mt-0">
-            <img src="/Ellipse 1 (1).png" alt="elipse">
+            <img src="/ellipse-2.png" alt="elipse">
             <div class="flex flex-col">
                 <p class="font-bold">Jane Doe</p>
                 <p class="text-sm">Sales Manager</p>
             </div>
         </div>
         <div class="flex flex-row mx-auto md:gap-x-2 gap-x-6 mt-2">
-            <img src="/Star 211.png" alt="star">
-            <img src="/Star 212.png" alt="star">
-            <img src="/Star 212.png" alt="star">
+            <img src="/star-211.png" alt="star">
+            <img src="/star-212.png" alt="star">
+            <img src="/star-212.png" alt="star">
         </div>
     </div>
     <div>
-        <div class=" grid md:grid-cols-3 gap-x-4 gap-y-10 px-10 sm:px-0 mt-20 container mx-auto">
+        <div class="px-10 mt-20 container mx-auto">
+            <h2 class="text-2xl mb-4"><span class="text-secondary">Plastic</span> News</h2>
+            <div class=" grid md:grid-cols-3 gap-x-4 gap-y-10">
             <article class=" bg-white">
                 <img src="/grant-ritchie-Nh7n1Kxb43U-unsplash.png" alt="Rectangle-8" class="w-full">
                 <div class="px-4 mt-4">
