--- a/src/our-partners.html
+++ b/src/our-partners.html
@@ -47,12 +47,11 @@
            <figure class="mb-10">
             <img src="/hand.png" alt="hand" class="w-full">
            </figure>
-
         </main>
-        <section class=" bg-tertiary-2">
-            <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8">
+        <aside class=" bg-tertiary-2 ">
+            <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8 relative">
                 <figure class="col-span-3 md:col-span-1">
-                    <img src="/president-ceo.png" alt="rectangle" class=" w-full">
+                    <img src="/president-ceo.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
                 </figure>
                 <div class="col-span-3 md:col-span-2 my-8">
                 <p class="text-sm uppercase mt-2 ">PRESIDENT & CEO</p>
@@ -61,7 +60,7 @@
                 <p class="leading-7 mt-4">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.  Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
-        </section>
+        </aside>
         <section class="container mx-auto px-10 ">
             <div class="grid grid-cols-2 gap-x-auto gap-x-24 gap-y-10 mt-6">
                 <div class="flex flex-col col-span-2 md:col-span-1">
