--- a/src/our-values.html
+++ b/src/our-values.html
@@ -65,11 +65,11 @@
            </article>
         </main>
         <section class=" bg-tertiary-2">
-            <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8">
+            <div class="container my-20 grid grid-cols-3 mx-auto px-10 gap-x-4 items-center gap-y-8 relative">
                 <figure class="col-span-3 md:col-span-1">
-                    <img src="/pexel.png" alt="rectangle" class=" w-full">
+                    <img src="/pexel.png" alt="rectangle" class="xl:absolute -top-8 mx-auto">
                 </figure>
-                <div class="col-span-3 md:col-span-2 ">
+                <div class="col-span-3 md:col-span-2 xl:py-20 py-10 ">
                 <p class="text-sm uppercase mt-2 ">diversity</p>
                 <img src="/vector-2.png" alt="vector" class="mt-2">
                 <h2 class="text-2xl font-bold capitalize mt-2">The diversity of our people is one of our greatest strengths.</h2>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-    <footer class="mt-10 md:mt-0 container mx-auto  px-10  mb-4">
+    <footer class="mt-12 md:mt-0 container mx-auto  px-10  mb-4">
         <img src="/Logo2.png" class="inline mb-2"alt="Logo2">
         <div class="grid xl:grid-cols-3 gap-y-4">
             <div>
