add location mobile page

--- a/src/locations.html
+++ b/src/locations.html
@@ -38,58 +38,80 @@
             </nav>
         </div>
     </header>
-    <main class="mx-auto container">
-        <p class="text-sm text-center mb-1">Where We Are</p>
-        <img src="/vector-2.png" alt="vector" class="mx-auto">
-        <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Our Locations</h1>
-        <img src="/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
-        <div class="relative">
-            <img src="/world-map-1.png" alt="world-map" class="w-full">
-            <div class="group">
-                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:hidden">
-                <img src="/vec-white.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:block hidden">
-                <div class="bg-white pt-6 pb-10 max-w-3xl drop-shadow-primary-shadow group-hover:flex flex-row absolute hidden right-0 bottom-0 pr-28 w-2/3">
-                    <div>
-                        <p class="text-secondary text-sm px-6">Turkey</p>
-                        <p class="font-bold px-6">Istanbul</p>
-                        <table class="text-left border-spacing-x-6 border-spacing-y-4 border-separate">
-                            <thead>
-                                <tr>
-                                    <th class="font-semibold">Address:</th>
-                                    <td class="max-w-xs">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <th class="font-semibold">Phone:</th>
-                                    <td>+1 000 000 0000</td>
-                                </tr>
-                                <tr>
-                                    <th class="font-semibold">Email:</th>
-                                    <td>info@scalachemicals.com</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="flex flex-col items-end justify-between ">
-                        <img src="/Vector.png" alt="vector">
-                        <div class="flex flex-row gap-x-4">
-                        <button class="px-8 py-3 text-white bg-secondary border-solid border-2 border-secondary">Directions</button>
-                        <button class="px-8 py-3 text-white bg-secondary border-solid border-2 border-secondary">Contact</button>
+    <main class="mx-auto container px-10 pb-5">
+        <div class="hidden md:block">
+            <p class="text-sm text-center mb-1">Where We Are</p>
+            <img src="/vector-2.png" alt="vector" class="mx-auto">
+            <h1 class="text-5xl font-extrabold leading-tight text-center my-2">Our Locations</h1>
+            <img src="/vector-1.png" alt="vector" class="py-4 mb-2 mx-auto ">
+            <div class="relative">
+                <img src="/world-map-1.png" alt="world-map" class="w-full">
+                <div class="group">
+                    <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:hidden">
+                    <img src="/vec-white.png" alt="bookmark" class="absolute bottom-[11.8%] left-[28.2%] group-hover:block hidden">
+                    <div class="bg-white pt-6 pb-10 px-6 max-w-3xl drop-shadow-primary-shadow group-hover:flex flex-col absolute -right-[10%] bottom-0 pr-10 w-3/5 hidden">
+                            <div class="flex flex-row justify-between">
+                                <p class="text-secondary text-sm ">Turkey</p>
+                                <img src="/Vector.png" alt="vector">
+                            </div>
+                            <p class="font-bold">Istanbul</p>
+                            <div class="flex flex-col items-end justify-between xl:flex-row">
+                                <table class="text-left border-spacing-x-6 border-spacing-y-4 border-separate mx-auto">
+                                    <thead>
+                                        <tr>
+                                            <th class="font-semibold">Address:</th>
+                                            <td class="max-w-xs">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <th class="font-semibold">Phone:</th>
+                                            <td><a href="tel:++1 000 000 0000">+1 000 000 0000</a></td>
+                                        </tr>
+                                        <tr>
+                                            <th class="font-semibold">Email:</th>
+                                            <td><a href="mailto:info@scalachemicals.com">info@scalachemicals.com</a> </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <div class="flex flex-row gap-x-4 mx-auto">
+                                <button class="px-8 py-3 text-white bg-secondary border-solid border-2 border-secondary my-auto">Directions</button>
+                                <button class="px-8 py-3 text-white bg-secondary border-solid border-2 border-secondary my-auto">Contact</button>
+                                </div>
+                            </div>
                         </div>
-                    </div>
                 </div>
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[21.5%] left-[35.8%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[36%] left-[27.5%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[44%] left-[18%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[52%] left-[22%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
+                <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
             </div>
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[21.5%] left-[35.8%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[36%] left-[27.5%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[44%] left-[18%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[52%] left-[22%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-            <img src="/bookmark.png" alt="bookmark" class="absolute bottom-[25%] left-[27%]">
-
+        </div>
+        <div class="md:hidden">
+            <h2 class="">Istanbul,Turkey</h2>
+            <table class="text-left border-spacing-x-8 border-spacing-y-4 border-separate mx-auto ">
+                <thead>
+                    <tr>
+                        <th class="font-semibold">Address:</th>
+                        <td class="">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed</td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th class="font-semibold">Phone:</th>
+                        <td>+1 000 000 0000</td>
+                    </tr>
+                    <tr>
+                        <th class="font-semibold">Email:</th>
+                        <td>info@scalachemicals.com</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
     <footer class="mt-10 md:mt-15 container mx-auto  px-10 mb-4">
